
 Control-X/Y/C now also works if Caps Lock is active
 http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=205895

 Copy/paste operations between KDE and Perl/Tk applications
 on 64bit system did not work, patch by Petr Pajas

 Canvas grids: -color was documented, but only -fill was implemented.
 In future both is supported.
 http://rt.cpan.org/Ticket/Display.html?id=47132

Documentation
 Documentation on "Perl/Tk and Unicode"

 Fixed cget/delete confusion in Entry.pod
 http://rt.cpan.org/Public/Bug/Display.html?id=50253

Tk-804.028_501 release (2008-11-04)
----------------------

Fixes
 File permissions of the tarball seemed to be problematic under
 Windows Vista and Strawberry Perl 5.10.0.3, causing aborted builds.
 This is hopefully fixed now.

 Changed cygwin default to x11 (native MSWin32 port still does not
 work).

New
 There's now an "examples" directory containing some useful scripts
 previously been elsewhere in the distribution.

Documentation
 Documented ROText key bindings.

 New README for Strawberry Perl.

Tests
 Prevent Event mini tests to be run when the rest of Tk is not tested,
 to avoid insignificant PASSes at cpantesters.

 More tests marked as TODO or SKIP.

Tk-804.028_500 release (2008-10-01)
----------------------

Fixes
 Security fix for GIF reader (CVE-2006-4484, report and patch by
 Anicka Bernathova)

 Make sure Tk::MsgBox is not displayed before calling Show()

 Solved problems with fileevent on 64bit architectures (this also
 fixes a problem with POE)

 Makefile.PL updates (auto-creation of META.yml, added LICENSE, exit
 cleanly if prereqs are missing --- this is for cpan testers)

 Fixed typo in Tk::FBox
 http://rt.cpan.org/Public/Bug/Display.html?id=31989

 Added different location of rgb.txt on Mac OS X 10.5.1 systems

 Fixed a makedepend issue, reported by marek.rouchal

 A BusyRecurse issue [rt.cpan.org #32858]

 Fixed Tk::ColorEditor problem with OpenBSD (another rgb.txt location)
